# eventmodeling-toolkit

./: .gitignore  LICENSE  README.md
python/eventmodeling/: Makefile  README.md  pyproject.toml
python/eventmodeling/eventmodeling/: cli.py
specification/: NOTES.md  README.md  spec.ts
specification/jsonschemas/: command.yaml  event.yaml  readmodel.yaml
